Backport commit r1291047: Git push dialog: Don't segfault at hitting git-svn's pseudo branches

BUG: 295400
FIXED-IN: 4.8.3

svn path=/branches/KDE/4.8/kdesdk/dolphin-plugins/; revision=1291048